# ChangeLog for dev-db/sqlcipher
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Dec 2014; Harold Naparst <harold@alum.mit.edu> sqlcipher-3.2.0.ebuild:
  Add dependence on dev-lang/tcl

*sqlcipher-3.2.0 (06 Dec 2014)

  06 Dec 2014; Harold Naparst <harold@alum.mit.edu> +sqlcipher-3.2.0.ebuild,
  +ZETETIC, +metadata.xml:
  Add sqlcipher-3.2.0.ebuild, ZETETIC license, metadata.xml
